--- a/src/GUI/Livraisonfxml.fxml
+++ b/src/GUI/Livraisonfxml.fxml
@@ -20,12 +20,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="836.0" prefWidth="1252.0" style="-fx-background-color: #003366;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LivraisonfxmlController">
+<AnchorPane id="AnchorPane" prefHeight="836.0" prefWidth="1252.0" style="-fx-background-color: #1e3148;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.LivraisonfxmlController">
     <stylesheets>
         <URL value="@livraisonfxml.css" />
     </stylesheets>
    <children>
-      <Label layoutX="540.0" layoutY="75.0" text="LIVRAISON" textFill="#f20000">
+      <Label layoutX="540.0" layoutY="75.0" text="Livraison" textFill="#f20000">
          <font>
             <Font size="48.0" />
          </font>
@@ -148,5 +148,16 @@
             <Font size="18.0" />
          </font>
       </Label>
+      <Button fx:id="btnretour" layoutX="1155.0" layoutY="800.0" mnemonicParsing="false" onAction="#gotomenu" prefHeight="35.0" prefWidth="80.0" style="-fx-background-color: #ff5757;" text="Retour" />
+      <ImageView fitHeight="45.0" fitWidth="92.0" layoutX="1095.0" layoutY="795.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@—Pngtree—back%20icon_4627630.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="82.0" fitWidth="70.0" layoutX="462.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Picto_Hp_Livraison_Blanc.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
