--- a/src/GUI/Miseajoufxml.fxml
+++ b/src/GUI/Miseajoufxml.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="916.0" prefWidth="1285.0" style="-fx-background-color: #003366;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.MiseajoufxmlController">
+<AnchorPane id="AnchorPane" prefHeight="563.0" prefWidth="828.0" style="-fx-background-color: #1e3148;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.MiseajoufxmlController">
     <stylesheets>
         <URL value="@miseajoufxml.css" />
     </stylesheets>
@@ -162,5 +162,11 @@
          </image>
       </ImageView>
       <VBox layoutX="392.0" layoutY="141.0" prefHeight="641.0" prefWidth="186.0" />
+      <Button fx:id="retour" layoutX="1181.0" layoutY="848.0" mnemonicParsing="false" onAction="#gotomenujj" prefHeight="35.0" prefWidth="70.0" style="-fx-background-color: #ff5757;" text="Retour" />
+      <ImageView fitHeight="45.0" fitWidth="92.0" layoutX="1115.0" layoutY="843.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@—Pngtree—back%20icon_4627630.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
