--- a/src/Gui/Produit.fxml
+++ b/src/Gui/Produit.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="615.0" prefWidth="858.0" style="-fx-background-color: #1e3148;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Gui.ProduitController">
+<AnchorPane id="AnchorPane" prefHeight="563.0" prefWidth="828.0" style="-fx-background-color: #1e3148;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Gui.ProduitController">
     <stylesheets>
         <URL value="@produit.css" />
     </stylesheets>
@@ -33,12 +33,12 @@
             <TableColumn fx:id="tailleColumn" prefWidth="75.0" text="taille" />
          </columns>
       </TableView>
-      <Button fx:id="deleteButton" layoutX="409.0" layoutY="464.0" mnemonicParsing="false" onAction="#deleteButton" prefHeight="31.0" prefWidth="100.0" text="supprimer" />
-      <Button fx:id="updatebutton" layoutX="249.0" layoutY="464.0" mnemonicParsing="false" onAction="#updateButton" prefHeight="31.0" prefWidth="100.0" text="modifer" />
-      <Button fx:id="insertbutton" layoutX="86.0" layoutY="464.0" mnemonicParsing="false" onAction="#insertButton" prefHeight="31.0" prefWidth="100.0" text="ajouter" />
+      <Button fx:id="deleteButton" layoutX="409.0" layoutY="464.0" mnemonicParsing="false" onAction="#deleteButton" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: #ff5757;" text="supprimer" />
+      <Button fx:id="updatebutton" layoutX="249.0" layoutY="464.0" mnemonicParsing="false" onAction="#updateButton" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: #ff5757;" text="modifer" />
+      <Button fx:id="insertbutton" layoutX="86.0" layoutY="464.0" mnemonicParsing="false" onAction="#insertButton" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: #ff5757;" text="ajouter" />
       <TextField fx:id="txtid" layoutX="366.0" layoutY="520.0" />
       <TextField fx:id="search" layoutX="365.0" layoutY="79.0" onMouseClicked="#rechercheEq" promptText="rechercher" />
-      <Button fx:id="btnpdf" layoutX="571.0" layoutY="464.0" mnemonicParsing="false" onAction="#pdfP" text="PDF" />
+      <Button fx:id="btnpdf" layoutX="571.0" layoutY="464.0" mnemonicParsing="false" onAction="#pdfP" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: #ff5757;" text="PDF" />
       <HBox prefHeight="56.0" prefWidth="858.0" style="-fx-background-color: #ff5757;">
          <children>
             <ImageView fitHeight="67.0" fitWidth="264.0" pickOnBounds="true" preserveRatio="true">
@@ -72,5 +72,6 @@
          </padding>
       </VBox>
       <TextField fx:id="txtidP" disable="true" layoutX="62.0" layoutY="64.0" />
+      <Button fx:id="btnretourr" layoutX="705.0" layoutY="528.0" mnemonicParsing="false" onAction="#GoToMenu" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: #ff5757;" text="retour" />
    </children>
 </AnchorPane>
